objects/Organizational_Group_Item__c.object
<CustomObject>
    <fields>
        <fullName>Pricing_Task_Reasons__c</fullName>
        <label>Pricing Task Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PT01- 002 - Trade fair sales activity</fullName>
                </value>
                <value>
                    <fullName>PT02-Other reason</fullName>
                </value>
                <value>
                    <fullName>PT03- F06 -Demonstration to Customer</fullName>
                </value>
                <value>
                    <fullName>PT04- F09 - Research &amp; Development</fullName>
                </value>
                <value>
                    <fullName>PT05- F12 - Replacement</fullName>
                </value>
                <value>
                    <fullName>PT06- F15 - Sales Promotion</fullName>
                </value>
                <value>
                    <fullName>PT07- M12 - Pricing Discrepancy</fullName>
                </value>
                <value>
                    <fullName>PT08- M13 - Quantity Correction</fullName>
                </value>
                <value>
                    <fullName>PT09- M31 - Commercial Adjustment</fullName>
                </value>
                <value>
                    <fullName>PT10-S01 - Paid Sample sales</fullName>
                </value>
                <value>
                    <fullName>PT11-Non-standard product</fullName>
                </value>
                <value>
                    <fullName>PT12-Displays</fullName>
                </value>
                <value>
                    <fullName>PT13-Showroom</fullName>
                </value>
                <value>
                    <fullName>PT14-Slow moving inventory</fullName>
                </value>
                <value>
                    <fullName>PT15-Gap closer</fullName>
                </value>
                <value>
                    <fullName>PT16-Sales Promotion</fullName>
                </value>
                <value>
                    <fullName>PT17-Key accounts prices</fullName>
                </value>
                <value>
                    <fullName>PT18-2Q product sales</fullName>
                </value>
                <value>
                    <fullName>PT19-Dual sales mode</fullName>
                </value>
                <value>
                    <fullName>PT20-Discounted Sales</fullName>
                </value>
                <value>
                    <fullName>PT21-Surcharge ( LTC Order )</fullName>
                </value>
                <value>
                    <fullName>PT22-Surcharge Waiver</fullName>
                </value>
                <value>
                    <fullName>PT23-Dual Currency</fullName>
                </value>
                <value>
                    <fullName>PT24-Price Increase</fullName>
                </value>
                <value>
                    <fullName>PT25-Metal Adjustment</fullName>
                </value>
                <value>
                    <fullName>PT26-Fast As You Need It</fullName>
                </value>
                <value>
                    <fullName>PT30-Order Fulfilled with Alt Product</fullName>
                </value>
                <value>
                    <fullName>PT27-New price not on SAP yet</fullName>
                </value>
                <value>
                    <fullName>PT28-One time transaction</fullName>
                </value>
                <value>
                    <fullName>PT29-Second Quality</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pricing_Task_Type__c</fullName>
        <label>Pricing Task Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Free of Charge</fullName>
                </value>
                <value>
                    <fullName>Rebate Agreement</fullName>
                </value>
                <value>
                    <fullName>Spot Price</fullName>
                </value>
                <value>
                    <fullName>Other Pricing Task</fullName>
                </value>
                <value>
                    <fullName>Rebate adjustment</fullName>
                </value>
                <value>
                    <fullName>Rebate payout</fullName>
                </value>
                <value>
                    <fullName>Rebate Payout Product Shipment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Request_Reasons__c</fullName>
        <label>Project Request Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PP01-Quantity Change</fullName>
                </value>
                <value>
                    <fullName>PP02-Time Extension</fullName>
                </value>
                <value>
                    <fullName>PP03-Quantity and time change</fullName>
                </value>
                <value>
                    <fullName>PP04-Product change</fullName>
                </value>
                <value>
                    <fullName>PP05-Competitive Pricing</fullName>
                </value>
                <value>
                    <fullName>PP06-Condominium</fullName>
                </value>
                <value>
                    <fullName>PP07-Commercial</fullName>
                </value>
                <value>
                    <fullName>PP08-Residential</fullName>
                </value>
                <value>
                    <fullName>PP09-Exterior cladding</fullName>
                </value>
                <value>
                    <fullName>PP10-New Project</fullName>
                </value>
                <value>
                    <fullName>PP11-Renegotiation discount</fullName>
                </value>
                <value>
                    <fullName>PP12-Qty and product change</fullName>
                </value>
                <value>
                    <fullName>PP13-Qty, product and time change</fullName>
                </value>
                <value>
                    <fullName>PP14-Rate Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rebate_Agreement__c</fullName>
        <label>Rebate Agreement</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annual Agreement</fullName>
                </value>
                <value>
                    <fullName>Standard Rebate Agreement</fullName>
                </value>
                <value>
                    <fullName>Quarterly Agreement</fullName>
                </value>
                <value>
                    <fullName>Monthly Agreement</fullName>
                </value>
                <value>
                    <fullName>Market Share Gain</fullName>
                </value>
                <value>
                    <fullName>Accrual Adjustment</fullName>
                </value>
                <value>
                    <fullName>Volume Growth</fullName>
                </value>
                <value>
                    <fullName>Development Program</fullName>
                </value>
                <value>
                    <fullName>New Rebate</fullName>
                </value>
                <value>
                    <fullName>Rebate Renewal</fullName>
                </value>
                <value>
                    <fullName>Rebate Scheme Change</fullName>
                </value>
                <value>
                    <fullName>Other reason</fullName>
                </value>
                <value>
                    <fullName>Rebate Cancellation</fullName>
                </value>
                <value>
                    <fullName>Compensated Price</fullName>
                </value>
                <value>
                    <fullName>Partner Rebate</fullName>
                </value>
                <value>
                    <fullName>Combine Rebate</fullName>
                </value>
                <value>
                    <fullName>Third Party Rebate Agreement</fullName>
                </value>
                <value>
                    <fullName>Sales Promotion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Class__c</fullName>
        <label>Request Class</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2nd Life Material (2LM)</fullName>
                </value>
                <value>
                    <fullName>Accessories and Furniture</fullName>
                </value>
                <value>
                    <fullName>Aircraft</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>Apexa</fullName>
                </value>
                <value>
                    <fullName>Apollo Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Apparel</fullName>
                </value>
                <value>
                    <fullName>Apple (PCo)</fullName>
                </value>
                <value>
                    <fullName>APPROVER ONLY</fullName>
                </value>
                <value>
                    <fullName>Aramid Intermediates</fullName>
                </value>
                <value>
                    <fullName>Aramids Intermediates</fullName>
                </value>
                <value>
                    <fullName>Artificial Graphite Sheet</fullName>
                </value>
                <value>
                    <fullName>Asia Pacific</fullName>
                </value>
                <value>
                    <fullName>Auto</fullName>
                </value>
                <value>
                    <fullName>Auto and Other</fullName>
                </value>
                <value>
                    <fullName>Automotive</fullName>
                </value>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>BU Approval only</fullName>
                </value>
                <value>
                    <fullName>BU Approval only (EA)</fullName>
                </value>
                <value>
                    <fullName>BU Approval only (MENAF)</fullName>
                </value>
                <value>
                    <fullName>BU Approval only (WA)</fullName>
                </value>
                <value>
                    <fullName>C&amp;I</fullName>
                </value>
                <value>
                    <fullName>Carpet</fullName>
                </value>
                <value>
                    <fullName>Chemical Industrial</fullName>
                </value>
                <value>
                    <fullName>CHINA</fullName>
                </value>
                <value>
                    <fullName>CI ECEMEA</fullName>
                </value>
                <value>
                    <fullName>Circuit Imaging</fullName>
                </value>
                <value>
                    <fullName>CI WE</fullName>
                </value>
                <value>
                    <fullName>COATINGS</fullName>
                </value>
                <value>
                    <fullName>Commercial</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Retroactive_Limit__c</fullName>
        <label>Earliest Valid From Offset</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Standardized_Currency__c</fullName>
        <description>This field is used to store the standard currency of the sales area</description>
        <label>Standardized Currency</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Standardized_UoM__c</fullName>
        <label>Standardized UoM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPaymentTermsApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isPaymentTermsApplicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isVolumeApplicable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isVolumeApplicable</label>
        <type>Checkbox</type>
    </fields>
    <label>Organizational Group Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business__c</columns>
        <columns>OrgGroup__c</columns>
        <columns>ERP_Pricing_Procedure__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Default_Prices_Selection__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>OGI-{00000}</displayFormat>
        <label>Organizational Group Item Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Organizational Group Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>